Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27297

wsrep error log messages drop last character, if message length is 128

    XMLWordPrintable

Details

    Description

      Due to bug in buffer length arithmetic, the last character may be dropped from the message

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            seppo Seppo Jaakola
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 1d Original Estimate - 1d
                1d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d 1h
                1d 1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.